--- a/K8055.csproj
+++ b/K8055.csproj
@@ -61,17 +61,17 @@
     <Compile Include="Game\Entities\MovingEntity.cs" />
     <Compile Include="Game\Entities\PlayerEnity.cs" />
     <Compile Include="Game\Entities\StaticEntity.cs" />
-    <Compile Include="Game\Entities\StratagemEntity.cs" />
+    <Compile Include="Game\Entities\StratagemEntityBase.cs" />
     <Compile Include="Game\Entities\Stratagems\GuidedMissileLuncher.cs" />
     <Compile Include="Game\Entities\Stratagems\MissileLuncher.cs" />
     <Compile Include="Game\Entities\Stratagems\DefaultTurret.cs" />
+    <Compile Include="Game\Entities\TurretStratagemBase.cs" />
     <Compile Include="Game\GameManager.cs" />
     <Compile Include="Game\AudioManager.cs" />
     <Compile Include="Game\Interface\LivingEntity.cs" />
     <Compile Include="Game\Systems\EntitySystem.cs" />
     <Compile Include="Game\Systems\GameSystem.cs" />
-    <Compile Include="Game\Systems\InputSystem.cs" />
-    <Compile Include="Game\K8055Manager.cs" />
+    <Compile Include="Game\InputManager.cs" />
     <Compile Include="Game\Systems\PlayerSystem.cs" />
     <Compile Include="Game\Systems\SystemBase.cs" />
     <Compile Include="Game\Systems\MainMenuSystem.cs" />
