--- a/K8055.csproj
+++ b/K8055.csproj
@@ -88,6 +88,7 @@
     <Compile Include="Lib\ClassExtension\ButtonExtension.cs">
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Lib\DictionnaryExtension.cs" />
     <Compile Include="Lib\Mathf.cs" />
     <Compile Include="Lib\SizeExtention.cs" />
     <Compile Include="Lib\Vector2 Unity.cs" />
