--- a/K8055.csproj
+++ b/K8055.csproj
@@ -13,6 +13,7 @@
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
     <langVersion>latest</langVersion>
+    <IsWebBootstrapper>false</IsWebBootstrapper>
     <PublishUrl>publish\</PublishUrl>
     <Install>true</Install>
     <InstallFrom>Disk</InstallFrom>
@@ -25,7 +26,6 @@
     <MapFileExtensions>true</MapFileExtensions>
     <ApplicationRevision>0</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
     <UseApplicationTrust>false</UseApplicationTrust>
     <BootstrapperEnabled>true</BootstrapperEnabled>
   </PropertyGroup>
@@ -82,7 +82,8 @@
     <Compile Include="Game\Entities\TurretStratagemBase.cs" />
     <Compile Include="Game\GameManager.cs" />
     <Compile Include="Game\AudioManager.cs" />
-    <Compile Include="Game\Interfaces\CollideEntity.cs" />
+    <Compile Include="Game\Interfaces\ICollideEntity.cs" />
+    <Compile Include="Game\Interfaces\IUpgradableStratagemEntity.cs" />
     <Compile Include="Game\SaveManager.cs" />
     <Compile Include="Game\Saves\PlayerData.cs" />
     <Compile Include="Game\Saves\Settings.cs" />
