--- a/K8055.csproj
+++ b/K8055.csproj
@@ -67,14 +67,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Game\Entities\AmmunitionEntity.cs" />
-    <Compile Include="Game\Entities\EnemyEntity.cs" />
+    <Compile Include="Game\Entities\EnemyEntityBase.cs" />
     <Compile Include="Game\Entities\Enemy\ClassicEnemyEntity.cs" />
     <Compile Include="Game\Entities\Enemy\FastEnemy.cs" />
     <Compile Include="Game\Entities\Enemy\TankEnemy.cs" />
     <Compile Include="Game\Entities\EntityBase.cs" />
     <Compile Include="Game\Entities\MovingEntity.cs" />
-    <Compile Include="Game\Entities\PlayerEnity.cs" />
-    <Compile Include="Game\Entities\StaticEntity.cs" />
+    <Compile Include="Game\Entities\PlayerEntity.cs" />
     <Compile Include="Game\Entities\StratagemEntityBase.cs" />
     <Compile Include="Game\Entities\Stratagems\GuidedMissileLuncher.cs" />
     <Compile Include="Game\Entities\Stratagems\MissileLuncher.cs" />
@@ -125,6 +124,7 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Game\Entities\StaticEntity.cs" />
     <EmbeddedResource Include="GameWindow.resx">
       <DependentUpon>GameWindow.cs</DependentUpon>
     </EmbeddedResource>
